# zfs-remote-backup

./: .cspell.yaml  .env  .gitignore  .golangci.yaml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  crontab  docker-compose.yml  example_zrb_config.yaml  go.mod  go.sum  pyproject.toml  requirements.txt  status.toml  zfs_snapshot_script.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  go-release.yml  go-test.yml  python_test.yml
app/: backup_manager.py  compress_encrypt.py  compress_handler.py  define.py  encrypt_age.py  encrypt_handler.py  extract_handler.py  file_handler.py  file_manager.py  hash_handler.py  latest_snapshot.py  main.py  remote_handler.py  sha256.py  snapshot_handler.py  status.py  status_manager.py  test.py  upload.py  zfs.py  zfs_export.py
archive/: README.md
archive/go-original/: .gitignore  build.sh
archive/python-legacy/: backup_manager.py  crontab  define.py  docker-compose.yml  encrypt_handler.py  file_handler.py  pyproject.toml  remote_handler.py  sha256.py  snapshot_handler.py  status.py
archive/python-tests/: test_integration_task.py
archive/rust-experimental/: readme.md
cmd/zrb/: cmd_backup.go  cmd_keys.go  cmd_list.go  cmd_restore.go  cmd_snapshot.go  crypto.go  main.go  manifest.go  util.go
docs/: CHANGELOG_TMP_NAMING.md  DEPLOYMENT_GUIDE.md  GRACEFUL_SHUTDOWN.md  PRODUCTION_CHECKLIST.md  S3_RESTORE_TEST_REPORT.md  TEST_GUIDE_10GB.md
internal/backup/: backup.go
internal/check/: check.go
internal/config/: config.go  config_test.go
internal/crypto/: crypto.go
internal/keys/: keys.go
internal/list/: list.go
internal/lock/: lock.go  lock_test.go
internal/logging/: logging.go
internal/manifest/: manifest.go  types.go
internal/remote/: remote.go  remote_test.go
internal/restore/: restore.go
internal/util/: util.go  util_test.go
internal/zfs/: zfs.go
simple_backup/: .gitignore  build.sh  config.go  crypto.go  go.mod  lock.go  logger.go  main.go  manifest.go  remote.go  zfs.go  zrb-config-schema.json  zrb_simple_config.yaml  zrb_simple_run.sh
test/e2e/: backup_test.go  (+8 more)
tests/: test_integration_task.py  test_status.py
vm/: init.sh  run_backup_test.sh  setup_vm.sh  test.sh  zrb_simple_config.yaml
zrb/: Cargo.toml
zrb/src/: backup_manager.rs  main.rs
zrb/src/compression/: manager.rs  mod.rs  zstd_compressor.rs
zrb/src/encryption/: age_encryptor.rs  manager.rs
zrb/src/hash/: blake3_hasher.rs  manager.rs  mod.rs
zrb/src/remote/: manager.rs
zrb/src/snapshot/: manager.rs
zrb/src/status/: binary_file_io_tests.rs  manager.rs  mod.rs  model.rs
(+32 files in other folders)
