[project]
name = "remote-backup"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.28",
    "cryptography>=44.0.2",
    "pynacl>=1.5.0",
    "pyrage>=1.2.5",
    "pyrage-stubs>=1.2.4",
]

[dependency-groups]
dev = ["boto3-stubs[full]>=1.37.28", "pyrage-stubs>=1.2.4"]
