[project]
name = "remote-backup"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.28",
    "cryptography>=44.0.2",
    "dacite>=1.9.2",
    "loguru>=0.7.3",
    "pynacl>=1.5.0",
    "pyrage>=1.2.5",
    "tomlkit>=0.13.2",
]

[dependency-groups]
dev = ["boto3-stubs[full]>=1.37.28", "pyrage-stubs>=1.2.4", "pytest>=8.3.5"]

# https://github.com/astral-sh/uv/issues/7260
[tool.pytest.ini_options]
pythonpath = ["."]
