[project]
name = "remote-backup"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.28",
    "cryptography>=44.0.2",
    "dacite>=1.9.2",
    "loguru>=0.7.3",
    "minio>=7.2.15",
    "msgpack>=1.1.0",
    "pynacl>=1.5.0",
    "pyrage>=1.2.5",
    "tomlkit>=0.13.2",
]

[dependency-groups]
dev = [
    "boto3-stubs[full]>=1.37.28",
    "msgpack-types>=0.5.0",
    "pyrage-stubs>=1.2.4",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

# https://github.com/astral-sh/uv/issues/7260
[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
interpreter = [".venv/Scripts/python"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "UP015",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
