[package]
name = "zrb"
description = "ZFS Remote Backup"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
mockall = "0.13.1"
zstd = "0.13.2"
age = "0.11.0"
sha2 = "0.10.9"
blake3 = "1.5.7"
hex = "0.4.3"
serde = { version = "1.0.218", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
rstest = "0.25.0"
tempfile = "3.14.0"
